# contract-evm

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: api.proto  api.rs
client/: Cargo.toml
client/src/: main.rs
examples/client/: Cargo.toml
examples/client/src/: main.rs
resources/: cryptokitties.contract
src/: evm.rs  lib.rs
