[package]
name = "dummy"
version = "0.1.0"
authors = ["Jernej Kos <jernej@kos.mx>"]
build = "build.rs"

[lib]
name = "dummy"
crate-type = ["staticlib"]

[dependencies]
dummy-api = { path = "./api" }
ekiden-core-common = { path = "./ekiden/core/common" }
ekiden-core-trusted = { path = "./ekiden/core/trusted" }
protobuf = "1.4.3"

[build-dependencies]
ekiden-tools = { path = "./ekiden/tools" }
ekiden-core-edl = { path = "./ekiden/core/edl" }

