[package]
name = "dummy-client"
version = "0.1.0"
authors = [
    "Jernej Kos <jernej@kos.mx>"
]

[dependencies]
client-utils = { path = "../../ekiden/clients/utils" }
ekiden-core-common = { path = "../../ekiden/core/common" }
ekiden-rpc-client = { path = "../../ekiden/rpc/client" }
dummy-api = { path = "../../api" }
clap = "2.29.1"
rand = "0.4"
futures = "0.1"
tokio-core = "0.1"
